<resources>
    <string name="app_name">ProjectoProgamacaoAvancada</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Menu Principal</string>
    <string name="second_fragment_label">Pacientes</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Butao_pacientes">PACIENTES</string>
    <string name="Butao_alimentos">Alimentos</string>
    <string name="Butao_registos">Registos</string>
    <string name="butao_adicionar_paciente">Novo Paciente</string>
    <string name="butao_editar_paciente">Editar Paciente</string>
    <string name="butao_apagar_paciente">Apagar Paciente</string>
    <string name="SelecionarPacienteText">Selecione o Paciente</string>
    <string name="DataNasc">Data de Nascimento</string>
    <string name="NomePaciente">Nome</string>
    <string name="PacienteAltura">Altura (cm)</string>
    <string name="adicionar">Adicionar</string>
    <string name="alterar">Alterar</string>
    <string name="eliminar">Eliminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AdicionaEditaPaciente">Adicionar Paciente</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="campoObrigatorio">Campo Obrigatório</string>
    <string name="PacienteaAddSucesso">Paciente adicionado com Sucesso</string>
    <string name="PacienteAddErro">Erro ao adicionar Paciente</string>
    <string name="fragment_apagar_paciente">Apagar Paciente</string>
    <string name="_180">180</string>
    <string name="_18_12_1985">18/12/1985</string>
    <string name="paulo_proen_a">Paulo Proença</string>
    <string name="action_delete">action_delete</string>
    <string name="ApagarPaciente">Apagar Paciente</string>
    <string name="Confirmar_apagar_paciente">Tem a certeza que quer apagar o paciente?</string>
    <string name="Cancel_apagar">Cancelar</string>
    <string name="apagar_confirmacao">Apagar</string>
    <string name="delete_sucess_paciente">Paciente apagado com sucesso</string>
    <string name="apagar_paciente_erro">Erro ao apagar Paciente</string>
    <string name="adicionaPacienteTitulo">Adicionar Paciente</string>
    <string name="editarPacienteTitulo">Editar Paciente</string>
    <string name="NomeAlimento">Alimento</string>
    <string name="hintAlimento">Alimento</string>
    <string name="AlimentosHidratos">Hidratos por 100g</string>
    <string name="hinValorHidratos">Hidratos por 100g</string>
    <string name="alimentoOpcoes">Alimentos - Opções</string>
    <string name="fragment_adicionar_alimentos">Adicionar Alimentos</string>
    <string name="AlimentadoGuardado">Alimento Guardado com Sucesso</string>
    <string name="ErroGuardarAlimento">Erro ao Guardar Alimento</string>
    <string name="ApagarAlimentoTitulo">Apagar Alimento</string>
    <string name="ConfirmaApagaAlimento">Tem a certeza que pretende eliminar o Alimento?</string>
    <string name="AlimentoApagadoSucesso">Alimento eliminado com sucesso!!</string>
    <string name="AlimentoApagadoErro">Erro ao Eliminar Alimento!!</string>
    <string name="adicionaAlimentoTitulo">Adicionar Alimentos</string>
    <string name="editaAlimentoTitulo">Editar Alimento</string>
    <string name="buttonCalc">Calcular</string>
    <string name="SelecionarAlimentoText">Selecione o Alimento</string>
    <string name="SelectPeso"> Introduza o Peso do Paciente (kg)</string>
    <string name="pesoAlim"> Introduza o Peso do Alimento (gr)</string>
    <string name="selectGlicemia"> Introduza o valor da Glicemia</string>
    <string name="validateCalc">Calcular</string>
    <string name="AddAlimentoCalc">"Adicionar Alimento "</string>
    <string name="SucessRegAdd">Registo Adiconado com Sucesso!!</string>
    <string name="ErrorRegAdd">Erro ao Adicionar Registo !!</string>
    <string name="fragment_calcular">Calcular UI</string>
    <string name="RegeNumber">Registo nº: </string>
    <string name="reg_one">1</string>
    <string name="RegeData">Data de Registo: </string>
    <string name="RegNomePaciente">Nome do Paciente</string>
    <string name="PacientePeso">Peso do Paciente (Kg) </string>
    <string name="peso">55.5</string>
    <string name="RegGlicemia">Glicemia: </string>
    <string name="InsulinaReg">"Insulina(Uni): "</string>
    <string name="fragment_registo_opcoes">Lista de Registos</string>
    <string name="fragment_apagar_registo">Apagar Registo</string>
    <string name="APAGAR_REGISTO_TITLE">Apagar Registo</string>
    <string name="ConfirmaApagaRegisto">Tem a certeza que pretende eliminar o Registo?</string>
    <string name="delete_sucess_registo">Registo Apagado com Sucesso!</string>
    <string name="delete_error_registo">Erro ao apagar Registo!!</string>
    <string name="action_cancel">action_cancel</string>
    <string name="ver_alimento_por_registo">Ver alimento por Registo</string>
</resources>