<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/icons8_add_30"
        android:title="@string/adicionar"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/icons8_edit_30"
        android:title="@string/alterar"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/icons8_trash_30"
        android:title="@string/eliminar"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/action_alim_reg"
        android:icon="@drawable/icons8_eye_30"
        android:title="@string/ver_alimento_por_registo"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>