<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_error"
    tools:context=".ApagarRegisto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/BackgroundApp">

        <TextView
            android:id="@+id/RegNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/RegeNumber"
            android:textColor="#009196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegNumberView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/reg_one"
            app:layout_constraintStart_toEndOf="@+id/RegNumber"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/RegeData"
            android:textColor="#009196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegNumber"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegDataView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/_18_12_1985"
            app:layout_constraintStart_toEndOf="@+id/RegData"
            app:layout_constraintTop_toBottomOf="@+id/RegNumberView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegNomePaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/RegNomePaciente"
            android:textColor="#009196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegData"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegNomePacienteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/paulo_proen_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegNomePaciente"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegPesoPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/PacientePeso"
            android:textColor="#009196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegNomePacienteView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegPesoPacienteView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/peso"
            app:layout_constraintStart_toEndOf="@+id/RegPesoPaciente"
            app:layout_constraintTop_toBottomOf="@+id/RegNomePacienteView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegGlicemia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/RegGlicemia"
            android:textColor="#009196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegPesoPaciente"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegGlicemiaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/_180"
            app:layout_constraintStart_toEndOf="@+id/RegGlicemia"
            app:layout_constraintTop_toBottomOf="@+id/RegPesoPacienteView"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegInsulina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/InsulinaReg"
            android:textColor="#009196"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RegGlicemia"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/RegInsulinaView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/RegInsulina"
            app:layout_constraintTop_toBottomOf="@+id/RegGlicemiaView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>