<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCC9CA"
    tools:context=".MenuPrincipalFrag">

    <Button
        android:id="@+id/button_paciente"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Butao_pacientes"
        app:backgroundTint="#009196"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Alimentos"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Butao_alimentos"
        app:backgroundTint="#009196"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_paciente" />

    <Button
        android:id="@+id/button_Registos"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Butao_registos"
        app:backgroundTint="#009196"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Alimentos" />

    <Button
        android:id="@+id/button_Calcular"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/buttonCalc"
        app:backgroundTint="#009196"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Registos" />

</androidx.constraintlayout.widget.ConstraintLayout>