<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PacienteOpcoesFrag">

    <Button
        android:id="@+id/button_adiciona_paciente"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/butao_adicionar_paciente"
        app:backgroundTint="#009196"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_editar_paciente"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/butao_editar_paciente"
        app:backgroundTint="#009196"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_adiciona_paciente"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button_apagara_paciente"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/butao_apagar_paciente"
        app:backgroundTint="#009196"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_editar_paciente"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>